cambios y mejoras en el html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cv de prueba ;)</title>
-
+    <title>Cv Rocio Gabalda</title>
 </head>
-
 <body>
     <header>
         <h1>Rocio Gabalda</h1>
         <h4>Licenciada en diseño y comunicación visual</h4>
-
     </header>
     <section>
         <img src="imagenes/yo.jpg" width="274px" height="328px"/>
@@ -22,9 +19,9 @@
             Sobre mi
         </h2>
         <p>
-            no se que poner todavia
+        Me llamo Rocio Gabalda, tengo 23 años, actualmente me encuentro transitando el cuarto año de la carrera Licenciatura en diseño y comunicación visual y tambien trabajo en un estudio contable.
         </p>
-    </section>  
+    </section> 
     <section>
         <h2>
             Experiencia
@@ -33,19 +30,19 @@
             <li>
                <h3>
                 anima grafica.
-               </h3>  
+               </h3>
+                <p>
                 diseño grafico y armado de piezas industriales
+                </p>
             </li>
             <li>
                 <h3>
                     Estudio contable Moriones
-                </h3>
-                Administrativa
-            </li>
-        </ul>
-
-
-    </section>  
+                </h3>    
+                    <p>Secretaria</p> 
+            </li>       
 </body>
-
+<footer>
+    <h4>Cv Rocio Gabalda-Computacion 3</h4>
+</footer>
 </html>
