cambios y mejoras en el html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     Estudio contable Moriones
                 </h3>    
                     <p>Secretaria</p> 
-            </li>       
+            </li>  
+        </ul> 
+    </section>            
 </body>
 <footer>
     <h4>Cv Rocio Gabalda-Computacion 3</h4>
